# ai-story

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  install.sh
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_workspace.py  0003_memory.py  0004_confirmations.py  0005_rag_chunks.py  0006_materials.py  0007_model_profile_per_model_credentials.py  0008_model_profile_per_model_providers.py  0009_context_management.py  0010_material_changes.py  0011_confirmation_resolved_at.py  0012_timeline_event_position.py  0013_structured_story_state.py
backend/app/: main.py
backend/app/agent/: __init__.py  atomic_ops.py  chapter_body.py  chat_stream.py  checkpoint.py  context.py  context_loader.py  (+11 more)
backend/tests/: conftest.py  test_agent_checkpoint.py  test_agent_confirmations.py  test_agent_memory_intent.py  test_agent_prompts.py  test_agent_tool_api.py  test_auth.py  test_chapter_body.py  test_confirmation_history.py  test_context_assembly.py  test_context_pack.py  test_context_settings.py  test_conversations.py  test_document_actions.py  test_document_search.py  test_health.py  test_langchain_tools.py  test_local_agent_skill.py  test_local_novel_skills.py  test_local_scoring_skill.py  test_materials.py  test_memory.py  test_model_profiles.py  test_model_runtime.py  test_mvp_flow.py  test_rag_memory.py  test_review_flows.py  test_split_chapter.py  test_thinking_chat_model.py  test_tool_runtime.py  test_tool_trace.py  test_workspace.py  test_write_workflow.py
(+225 files in other folders)
