[project]
name = "ai-story-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "bcrypt<5",
  "fastapi>=0.115",
  "httpx>=0.27",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
  "langgraph>=0.2",
  "passlib[bcrypt]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.5",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
